# thermocktat

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  config.yaml  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci-python-client.yaml  ci.yaml  release-image.yaml  release-python-client.yaml  release.yaml
clients/python/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
clients/python/src/thermocktat_client/: __init__.py  _base.py  thermocktat_async.py  thermocktat_sync.py  types.py
clients/python/tests/: conftest.py  test_thermocktat_async.py  test_thermocktat_sync.py  test_types.py
cmd/app/: config.go  config_defaults.yaml  config_test.go  weather_config_test.go
cmd/thermocktat/: main.go
integration/: .gitignore  Dockerfile.dut  README.md  conftest.py  pyproject.toml  test_bacnet_control.py  test_http_control.py  test_knx_control.py  test_modbus_control.py  test_mqtt_control.py
integration/.github/workflows/: ci.yaml
internal/buildinfo/: buildinfo.go
internal/controllers/bacnet/: README.md  controller.go  controller_test.go
internal/controllers/http/: README.md  server.go  server_test.go
internal/controllers/knx/: README.md  config.go  controller.go  controller_test.go  dpt.go  dpt_test.go  frame.go  frame_test.go  groupaddr.go  groupaddr_test.go  tunneling.go  tunneling_test.go
internal/controllers/modbus/: README.md  controller.go  controller_test.go
internal/controllers/mqtt/: README.md  controller.go  controller_test.go
internal/device/: device.go  device_test.go
internal/logging/: logging.go  logging_test.go
internal/mqtt/: controller.go
internal/ports/: thermostat.go  weather.go
internal/testutil/: thermostat_service.go  weather_provider.go
internal/thermostat/: errors.go  heat_loss_simulator.go  heat_loss_simulator_test.go  port.go  regulator.go  regulator_test.go  thermostat.go  thermostat_test.go  types.go  types_test.go  weather_refresh_test.go
internal/weather/: openmeteo.go  openmeteo_test.go  static.go  static_test.go
scripts/: evolution_csv.go
