[project]
name = "integration"
version = "0.1.0"
description = "Integration test for thermocktat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pymodbus>=3.11.4",
    "paho-mqtt>=2.1.0",
    "docker>=7.0.0",
    "xknx>=3.0.0",
    "pytest-asyncio>=0.25.0",
    "thermocktat-client",
]

[tool.uv.sources]
thermocktat-client = { path = "../clients/python", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.33",
]
