[project]
name = "integration"
version = "0.1.0"
description = "Integration test for thermocktat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pymodbus>=3.13.0",
    "paho-mqtt>=2.1.0",
    "docker>=7.1.0",
    "xknx>=3.0.0",
    "pytest-asyncio>=1.3.0",
    "thermocktat-client",
]

[tool.uv.sources]
thermocktat-client = { path = "../clients/python", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.33",
]
