[project]
name = "thermocktat-client"
version = "0.3.0"
description = "A python client for the Thermocktat, a lightweight, multi-protocol thermostat emulator."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "guidon1", email = "lucas.david@a-grid.com" }
]
requires-python = ">=3.13"
keywords = ["thermocktat", "thermostat", "bms", "hvac", "emulator", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/Agrid-Dev/thermocktat"
Source = "https://github.com/Agrid-Dev/thermocktat"
Issues = "https://github.com/Agrid-Dev/thermocktat/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
